--- a/sqitch.conf
+++ b/sqitch.conf
@@ -6,5 +6,5 @@
     # verify_dir = migrations/verify
     # extension = sql
 [target "ci"]
-    uri = db:pg://testuser:testpass@localhost/test-db
+    uri = db:pg://testuser:testpass@127.0.0.1/testdb
     client = psql
